# FlexFringe

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  collector.sh  pautomac_tester.py  perplexities.txt  perplexity_eval.sh  perplexity_eval_2.sh  plot_results.py  taysir_evaluation.ipynb  taysir_track_1_evaluation.ipynb  taysir_track_2_distill_weighted_lsharp.py  taysir_track_2_evaluate_models.py  taysir_track_2_evaluation.ipynb  taysir_track_2_train_model.py  test_formatting.py  train_state_merging.sh
source/: CMakeLists.txt  Makefile  apta.cpp  apta.h  cmake_install.cmake  common.cpp  common.h  conflict_graph.cpp  conflict_graph.h  dfa_properties.cpp  dfa_properties.h  dfasat.cpp  dfasat.h  differencing.cpp  differencing.h  ea_utils.cpp  ea_utils.h  ensemble.cpp  ensemble.h  evaluation_factory.cpp  evaluation_factory.h  evaluators.h  gitversion.cpp  greedy.cpp  greedy.h  inputdata.cpp  inputdata.h  interactive.cpp  interactive.h  main.cpp  main_helpers.cpp  main_helpers.h  mem_store.cpp  mem_store.h  output_manager.cpp  output_manager.h  parameters.cpp  parameters.h  predict.cpp  predict.h  (+16 more)
source/active_learning/: CMakeLists.txt  active_learning_main.cpp  active_learning_main.h  active_learning_mode.cpp  active_learning_mode.h  readme.md  uml_class_diagram.xmi
source/active_learning/active_learning_util/: best_refinement_strategies.cpp  best_refinement_strategies.h  common_functions.cpp  common_functions.h  definitions.cpp  definitions.h  factories.cpp  factories.h  predict_active_learning.cpp  predict_active_learning.h  random_int_generator.cpp  random_int_generator.h
source/active_learning/algorithms/: algorithm_base.cpp  algorithm_base.h  algorithm_factory.cpp  algorithm_factory.h  ldot.cpp  ldot.h  lsharp.cpp  lsharp.h  lstar.cpp  lstar.h  lstar_imat.cpp  lstar_imat.h  paul.cpp  paul.h  pls_baseline.cpp  pls_baseline.h  probabilistic_lsharp.cpp  probabilistic_lsharp.h  probabilistic_lsharp_v2.cpp  probabilistic_lsharp_v2.h  probabilistic_lsharp_weighted.h  transformer_l_sharp.cpp  transformer_l_sharp.h  transformer_lsharp.cpp  transformer_lsharp.h  transformer_weighted_lsharp.cpp  transformer_weighted_lsharp.h  weighted_lsharp.cpp  weighted_lsharp.h
source/active_learning/databases/: database_base.h  database_headers.h  prefix_tree_database.cpp  prefix_tree_database.h
source/active_learning/equivalence_oracle/: active_state_sul_oracle.cpp  active_state_sul_oracle.h  active_sul_oracle.cpp  active_sul_oracle.h  eq_oracle_base.cpp  eq_oracle_base.h  input_file_oracle.cpp  input_file_oracle.h  lstar_oracle.h  oracle_headers.h  paul_oracle.cpp  paul_oracle.h  probabilistic_oracle.cpp  probabilistic_oracle.h  sqldb_sul_random_oracle.cpp  sqldb_sul_random_oracle.h  sqldb_sul_regex_oracle.cpp  sqldb_sul_regex_oracle.h  string_probability_oracle.cpp  string_probability_oracle.h  weight_comparing_oracle.cpp  weight_comparing_oracle.h
source/active_learning/incomplete_information/: distinguishing_sequence_fill.cpp  distinguishing_sequence_fill.h  distinguishing_sequence_fill_fast.cpp  distinguishing_sequence_fill_fast.h  ii_base.cpp  ii_base.h  overlap_fill.cpp  overlap_fill.h  overlap_fill_batch_wise.cpp  overlap_fill_batch_wise.h  readme.md
source/active_learning/memory/: adaptive_distinguishing_sequences.cpp  adaptive_distinguishing_sequences.h  classification_tree.cpp  classification_tree.h  distinguishing_sequences.cpp  distinguishing_sequences.h  distinguishing_sequences_tree.cpp  distinguishing_sequences_tree.h  observation_table.cpp  observation_table.h  observation_table_imat.cpp  observation_table_imat.h  readme.md  suffix_tree.cpp  suffix_tree.h
source/active_learning/oracle/: active_state_sul_oracle.cpp  active_state_sul_oracle.h  active_sul_oracle.cpp  active_sul_oracle.h  base_oracle.cpp  base_oracle.h  discrete_output_sul_oracle.cpp  discrete_output_sul_oracle.h  input_file_oracle.cpp  input_file_oracle.h  oracle_base.cpp  oracle_base.h  oracle_factory.cpp  oracle_factory.h  paul_oracle.cpp  paul_oracle.h  sqldb_sul_random_oracle.cpp  sqldb_sul_random_oracle.h  sqldb_sul_regex_oracle.cpp  sqldb_sul_regex_oracle.h  string_probability_oracle.cpp  string_probability_oracle.h  weight_comparing_oracle.cpp  weight_comparing_oracle.h
source/active_learning/system_under_learning/: database_sul.cpp  database_sul.h  dfa_sul.cpp  dfa_sul.h  input_file_sul.cpp  input_file_sul.h  (+17 more)
source/deprecated/: cms.cpp  cms.h
source/evaluation/: CMakeLists.txt  Makefile  aic.cpp  aic.h  alergia.cpp  alergia.h  alergia94.cpp  alergia94.h  cmake_install.cmake  cms.cpp  cms.h  count_types.cpp  count_types.h  css.cpp  css.h  edsm.cpp  edsm.h  evaluate.cpp  evaluate.h  gini.cpp  gini.h  kldistance.cpp  kldistance.h  l_star_evaluation.cpp  l_star_evaluation.h  likelihood.cpp  likelihood.h  log_alergia.cpp  log_alergia.h  lsharp_eval.cpp  lsharp_eval.h  lstar_evaluation.cpp  lstar_evaluation.h  mealy.cpp  mealy.h  membership_state_comparator.cpp  membership_state_comparator.h  mse_error.cpp  mse_error.h  overlap.cpp  (+21 more)
source/input/: abbadingoreader.cpp  abbadingoreader.h  attribute.cpp  attribute.h  csvreader.cpp  csvreader.h  i_inputdata.cpp  i_inputdata.h  inputdata.cpp  inputdata.h  inputdatalocator.cpp  inputdatalocator.h  streaming.cpp  streaming.h  tail.cpp  tail.h  trace.cpp  trace.h
source/misc/: csvrow.cpp  csvrow.h  printutil.h  sqldb.cpp  sqldb.h  trim.h  utils.h  zip.h
source/running_modes/: dfasat_mode.cpp  dfasat_mode.h  differencing_mode.cpp  differencing_mode.h  ensemble_mode.cpp  ensemble_mode.h  greedy_mode.cpp  greedy_mode.h  interactive_mode.cpp  interactive_mode.h  load_sqldb_mode.cpp  load_sqldb_mode.h  predict_mode.cpp  predict_mode.h  regex_mode.cpp  regex_mode.h  running_mode_base.cpp  running_mode_base.h  search_mode.cpp  search_mode.h  stream_mode.cpp  stream_mode.h  subgraphextraction_mode.cpp  subgraphextraction_mode.h
source/utility/: CMakeLists.txt  Makefile  cmake_install.cmake  countminsketch.h  hashfunction.h  json.hpp  loguru.cpp  loguru_LICENSE.txt  prefspacesavesketch.h  stringutil.h
(+591 files in other folders)
